manifests/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-db
  template:
    metadata:
      labels:
        app: student-db
    spec:
      containers:
        - name: mysql
          image: mysql:9.0.1
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: student-db
spec:
  selector:
    app: student-db
  ports:
    - protocol: TCP
      port: 3306
  clusterIP: None
